--- a/supermarket-acme/customer/src/main/resources/application.yml
+++ b/supermarket-acme/customer/src/main/resources/application.yml
@@ -1,6 +1,23 @@
 server:
   port: 8081
-
 spring:
   application:
     name: microservice-customer
+  jackson:
+    serialization.write_dates_as_timestamps: false
+
+  zipkin:
+    base: http://localhost:9411
+
+  datasource:
+    username: 'postgres'
+    password: 'postgres'
+    url: jdbc:postgresql://localhost:5432/customer
+  flyway:
+    enabled: true
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
