--- a/supermarket-acme/fraud/src/main/resources/application.yml
+++ b/supermarket-acme/fraud/src/main/resources/application.yml
@@ -1,20 +1,18 @@
 server:
-  port: 8081
+  port: 8082
 spring:
   application:
-    name: microservice-customer
+    name: microservice-fraud
   jackson:
     serialization.write_dates_as_timestamps: false
-
-  zipkin:
-    base: http://localhost:9411
 
   datasource:
     username: 'postgres'
     password: 'postgres'
-    url: jdbc:postgresql://localhost:5432/customer
+    url: jdbc:postgresql://localhost:5432/fraud
   flyway:
     enabled: true
+    baseline-on-migrate: true
   jpa:
     properties:
       hibernate:
