--- a/supermarket-acme/notification/src/main/resources/application.yml
+++ b/supermarket-acme/notification/src/main/resources/application.yml
@@ -1,18 +1,15 @@
 server:
-  port: 8081
+  port: 8083
 spring:
   application:
-    name: microservice-customer
+    name: microservice-notification
   jackson:
     serialization.write_dates_as_timestamps: false
-
-  zipkin:
-    base: http://localhost:9411
 
   datasource:
     username: 'postgres'
     password: 'postgres'
-    url: jdbc:postgresql://localhost:5432/customer
+    url: jdbc:postgresql://localhost:5432/notification
   flyway:
     enabled: true
   jpa:
