--- a/supermarket-acme/pom.xml
+++ b/supermarket-acme/pom.xml
@@ -11,13 +11,20 @@
 
     <modules>
         <module>customer</module>
+        <module>fraud</module>
+        <module>notification</module>
     </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring.boot.dependencies.version>2.6.0</spring.boot.dependencies.version>
+        <lombok.version>1.18.22</lombok.version>
         <spring.boot.maven.plugin.version>3.8.1</spring.boot.maven.plugin.version>
+        <model.mapper.version>3.0.0</model.mapper.version>
+        <flyway.core.version>5.2.4</flyway.core.version>
+        <openid.version>1.6.3</openid.version>
+        <spring.cloud.version>2021.0.0</spring.cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -29,6 +36,14 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -36,6 +51,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
@@ -43,7 +59,32 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${model.mapper.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway.core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${openid.version}</version>
+        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
@@ -51,10 +92,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${spring.boot.maven.plugin.version}</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
