--- a/supermarket-acme/fraud/src/main/resources/application.yml
+++ b/supermarket-acme/fraud/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
   jackson:
     serialization.write_dates_as_timestamps: false
 
+  zipkin:
+    base: http://localhost:9411
+
   datasource:
     username: 'postgres'
     password: 'postgres'
@@ -19,3 +22,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+    enabled: true
