--- a/supermarket-acme/pom.xml
+++ b/supermarket-acme/pom.xml
@@ -14,6 +14,7 @@
         <module>fraud</module>
         <module>notification</module>
         <module>service-registry</module>
+        <module>client</module>
     </modules>
 
     <properties>
