--- a/supermarket-acme/notification/src/main/resources/application.yml
+++ b/supermarket-acme/notification/src/main/resources/application.yml
@@ -29,3 +29,11 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     enabled: true
+
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queue:
+    notification: notification
+  routing-keys:
+    internal-notification: internal.notification.routing-key
