--- a/supermarket-acme/pom.xml
+++ b/supermarket-acme/pom.xml
@@ -15,6 +15,8 @@
         <module>notification</module>
         <module>service-registry</module>
         <module>client</module>
+        <module>api-gateway</module>
+        <module>rabbitmq</module>
     </modules>
 
     <properties>
