--- a/supermarket-acme/api-gateway/.gitignore
+++ b/supermarket-acme/api-gateway/.gitignore
@@ -1,9 +1,10 @@
 HELP.md
 target/
-logs/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+logs/
+!**/logs/
 
 ### STS ###
 .apt_generated
