--- a/supermarket-acme/api-gateway/.gitignore
+++ b/supermarket-acme/api-gateway/.gitignore
@@ -3,8 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+### Ignoring .log files
 logs/
-!**/logs/
+**/*.log
 
 ### STS ###
 .apt_generated
