--- a/supermarket-acme/notification/.gitignore
+++ b/supermarket-acme/notification/.gitignore
@@ -5,6 +5,10 @@ logs/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Ignoring .log files
+logs/
+**/*.log
+
 ### STS ###
 .apt_generated
 .classpath
